--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codersrank-template",
+  "name": "codersrank-practice",
   "version": "0.0.0",
   "private": false,
   "dependencies": {}
